set (_SRCS
  AttCell.cpp
  OpalBeamBeam.cpp
  OpalBeamBeam3D.cpp
  OpalBend.cpp
  OpalCavity.cpp
  OpalTravelingWave.cpp
  OpalCCollimator.cpp
  OpalCyclotron.cpp
  OpalDrift.cpp
  OpalECollimator.cpp
  OpalFlexibleCollimator.cpp
  OpalDegrader.cpp
  OpalElement.cpp
  OpalHKicker.cpp
  OpalHMonitor.cpp
  OpalInstrument.cpp
  OpalKicker.cpp
  OpalMarker.cpp
  OpalMonitor.cpp
  OpalMultipole.cpp
  OpalMultipoleT.cpp
  OpalOctupole.cpp
  OpalOffset/OpalLocalCylindricalOffset.cpp
  OpalOffset/OpalLocalCartesianOffset.cpp
  OpalOffset/OpalGlobalCylindricalOffset.cpp
  OpalOffset/OpalGlobalCartesianOffset.cpp
  OpalPatch.cpp
  OpalProbe.cpp
  OpalPepperPot.cpp
  OpalPolynomialTimeDependence.cpp
  OpalQuadrupole.cpp
  OpalRBend.cpp
  OpalRBend3D.cpp
  OpalRCollimator.cpp
  OpalRingDefinition.cpp
  OpalSBend.cpp
  OpalSBend3D.cpp
  OpalScalingFFAGMagnet.cpp
  OpalSeparator.cpp
  OpalSeptum.cpp
  OpalSextupole.cpp
  OpalSlit.cpp
  OpalSolenoid.cpp
  OpalSource.cpp
  OpalSRot.cpp
  OpalVariableRFCavity.cpp
  OpalVKicker.cpp
  OpalVMonitor.cpp
  OpalYRot.cpp
  OpalBeamline.cpp
  OpalParallelPlate.cpp
  OpalCyclotronValley.cpp
  OpalStripper.cpp
  )

include_directories (
  ${CMAKE_CURRENT_SOURCE_DIR}
)

add_opal_sources(${_SRCS})

set (HDRS
    AttCell.h
    OpalBeamBeam3D.h
    OpalBeamBeam.h
    OpalBeamline.h
    OpalBend.h
    OpalCavity.h
    OpalCCollimator.h
    OpalCyclotron.h
    OpalCyclotronValley.h
    OpalDegrader.h
    OpalDrift.h
    OpalECollimator.h
    OpalElement.h
    OpalHKicker.h
    OpalHMonitor.h
    OpalInstrument.h
    OpalKicker.h
    OpalMarker.h
    OpalMonitor.h
    OpalMultipole.h
    OpalMultipoleT.h
    OpalOctupole.h
    OpalParallelPlate.h
    OpalPatch.h
    OpalPepperPot.h
    OpalPolynomialTimeDependence.h
    OpalProbe.h
    OpalQuadrupole.h
    OpalRBend.h
    OpalRBend3D.h
    OpalRCollimator.h
    OpalRingDefinition.h
    OpalSBend3D.h
    OpalSBend.h
    OpalSeparator.h
    OpalSeptum.h
    OpalSextupole.h
    OpalSlit.h
    OpalSolenoid.h
    OpalSource.h
    OpalSRot.h
    OpalStripper.h
    OpalTravelingWave.h
    OpalVariableRFCavity.h
    OpalVKicker.h
    OpalVMonitor.h
    OpalYRot.h
    OpalOffset/OpalGlobalCartesianOffset.h
    OpalOffset/OpalGlobalCylindricalOffset.h
    OpalOffset/OpalLocalCartesianOffset.h
    OpalOffset/OpalLocalCylindricalOffset.h
)

install (FILES ${HDRS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/Elements/OpalOffset")